# RAGAS-Evaluation

./: .env.example  NONLLM_Evaluation.md  Optimization.md  README.md  evaluation_results.csv  main.py  non_llm_evaluation_results.csv  pyproject.toml
docker/: docker-compose.yml
documents/: ai_basics.txt  climate_change.txt  space_exploration.txt
src/rag_evaluation/: __init__.py  generator.py  ingest.py  pipeline.py  retriever.py
src/rag_evaluation/evaluation/: evaluator.py  non_llm_evaluator.py  report.py  test_dataset.py
